Move PngParser.ts to root

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,12 @@
 		"minesweeper/Minefield.ts",
 		"minesweeper/Minesweeper.ts",
 		"minesweeper/MSObserver.ts",
-		"minesweeper/PngParser.ts",
 		"minesweeper/RectMinesweeper.ts",
         "minesweeper/ImageMinesweeper.ts",
 		"minesweeper/TextMinesweeper.ts",
         
         "app.ts",
-        "routes.ts"
+        "routes.ts",
+		"PngParser.ts"
 	]
 }
