--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,15 @@
 	"files": [
 		"typings/tsd.d.ts",
         
-		"minesweeper/Cell.ts",
-        "minesweeper/ColorCell.ts",
-		"minesweeper/Input.ts",
-		"minesweeper/Minefield.ts",
-		"minesweeper/Minesweeper.ts",
-		"minesweeper/MSObserver.ts",
-		"minesweeper/RectMinesweeper.ts",
-        "minesweeper/ImageMinesweeper.ts",
-		"minesweeper/TextMinesweeper.ts",
+		"public/javascripts/Cell.ts",
+        "public/javascripts/ColorCell.ts",
+		"public/javascripts/Input.ts",
+		"public/javascripts/Minefield.ts",
+		"public/javascripts/Minesweeper.ts",
+		"public/javascripts/MSObserver.ts",
+		"public/javascripts/RectMinesweeper.ts",
+        "public/javascripts/ImageMinesweeper.ts",
+		"public/javascripts/TextMinesweeper.ts",
         
         "app.ts",
         "routes.ts",
