--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 	"files": [
 		"typings/tsd.d.ts",
         
+		"public/javascripts/index.ts",
 		"public/javascripts/Cell.ts",
         "public/javascripts/ColorCell.ts",
 		"public/javascripts/Input.ts",
