--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "start": "node ./app"
   },
   "dependencies": {
-    "fs": "0.0.2",
-    "pngjs": "^2.1.0",
-    
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "fs": "0.0.2",
     "jade": "~1.11.0",
+    "jquery": "^2.1.4",
     "morgan": "~1.6.1",
+    "pngjs": "^2.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
