--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		"public/javascripts/Minesweeper.ts",
 		"public/javascripts/MSObserver.ts",
 		"public/javascripts/names.ts",
+		"public/javascripts/pokedex.ts",
 		"public/javascripts/Pokesweeper.ts",
 		"public/javascripts/PokeUtil.ts",
 		"public/javascripts/Timer.ts",
